# xpaste_analogue

./: .env  .env.example  .gitignore  Dockerfile  README.MD  alembic.ini  app_text.py  config.py  database.py  docker-compose-local.yaml  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py  setup.cfg
api/: app.py  schemas.py  settings.py
api/db/: database.py  models.py  settings.py
api/router/: router.py
api/schemas/: xpaste.py
api/service/: clean_data.py  data_encription.py
api/views/: data_encription.py  service.py  text.py  utils.py
db/: database.py  models.py  settings.py
migrations/: README  env.py
migrations/versions/: 0a65e1135994_database_creation.py  35e24c7f79f8_add_salt.py  41d7980f2747_add_tutorial_model.py  487747727134_add_key_with_salt.py  5645a20a30f7_add_uuid.py  5eb69659d151_database_creation_with_id.py  6acaab3ba4ed_delete_datetime.py  84f0aad5918f_add_tutorial_model.py  89cf71098ead_add_key_with_datetime.py  969bf94bacac_database_creation.py  a5a17e16588a_database_creation.py  a653e5cd5f7c_database.py  a7fb964a65f1_delete_salt.py  b19c56dabebb_database_creation.py
tasks/: tasks.py
