[tool.poetry]
name = "xpaste-analogue"
version = "0.1.0"
description = "We are doing x-paste analogue project!"
authors = ["Artem Shcherban <yammyk1992@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
cryptography = "^41.0.4"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
bcrypt = "^4.0.1"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[tool.poetry.scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
