[tool.poetry]
name = "xpaste"
version = "0.1.0"
description = "We are doing copy version xpaste"
authors = ["Artem Shcherban <yammyk1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
cryptography = "^41.0.4"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
bcrypt = "^4.0.1"
pydantic-settings = "^2.0.3"
celery = "^5.3.4"
redis = "^5.0.1"
flower = "^2.0.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

